Issue #10987: Fix the recursion limit handling in the _pickle module.